; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_smb2.c_smb2_share_enum_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_smb2.c_smb2_share_enum_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }
%struct.smb2_context = type { i32 }

@sys = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.smb2_context*, i32, i8*, i8*)* @smb2_share_enum_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smb2_share_enum_cb(%struct.smb2_context* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.smb2_context*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.smb2_context* %0, %struct.smb2_context** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = call i32 (...) @VLC_SMB2_GENERIC_CB()
  %10 = load i8*, i8** %7, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sys, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  ret void
}

declare dso_local i32 @VLC_SMB2_GENERIC_CB(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
